[package]
name = "haproxy-agent"
description = "Haproxy agent for systemd"
authors = ["Dennis Kuypers <dennis.kuypers@centerdevice.de>"]
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
cd-haproxy-agent = { path = "../cd-haproxy-agent" }
cd-service-config = { path = "../cd-service-config" }
cd-systemd = { path = "../cd-systemd", features = [ "dbus_wrapper" ] }

anyhow = "1"
derive-new = "0.5"
env_logger = "0.9"
exitcode = "1"
futures = { version = "0.3.19" }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "net", "sync"] }
tokio-stream = "0.1.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[package.metadata.deb]
maintainer-scripts = "deb"

[package.metadata.deb.systemd-units]
enable = false
start = false
