[package]
name = "cssh"
description = "SSH into EC2 Instances"
authors = ["Dennis Kuypers <dennis.kuypers@centerdevice.de>"]
version = "0.3.0"
edition = "2021"

[dependencies]
cd-cli = { path = "../../lib/cd-cli", features = ["aws","vpn"] }

anyhow = "1"
structopt = "0.3"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
