[package]
name = "cvpn"
description = "Control VPN connections"
authors = ["Dennis Kuypers <dennis.kuypers@centerdevice.de>"]
version = "0.2.0"
edition = "2021"

[dependencies]
cd-cli = { path = "../../lib/cd-cli", features = ["vpn"] }
cd-tunnelblick = { path = "../../lib/cd-tunnelblick" }

anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
structopt = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"]}
