[package]
name = "cwk"
description = "Workflow tooling"
authors = ["Dennis Kuypers <dennis.kuypers@centerdevice.de>"]
version = "0.2.2"
edition = "2021"

[dependencies]
cd-cli = { path = "../../lib/cd-cli", features = ["pivotal"] }
cd-pivotaltracker = { path = "../../lib/cd-pivotaltracker" }

anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
structopt = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
