[package]
name = "cwk"
description = "Workflow tooling"
authors = ["Dennis Kuypers <dennis.kuypers@centerdevice.de>"]
version = "0.3.0"
edition = "2021"

[dependencies]
cd-cli = { path = "../../lib/cd-cli", features = ["pivotal"] }
cd-pivotaltracker = { path = "../../lib/cd-pivotaltracker" }

anyhow = "1.0"
git2 = "0.13"
serde = { version = "1", features = ["derive"] }
structopt = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = { version = "0.1" }
