[package]
name = "cd-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
cd-aws = { path = "../cd-aws", optional = true }
cd-tunnelblick = { path = "../cd-tunnelblick", optional = true }
centerdevice = { path = "../centerdevice-rs", optional = true }
#pivotal_api = { path = "../pivotal_api" }

anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
chrono-humanize = "0.2"
clap = "2"
derive-new = "0.5"
dialoguer = { version = "0.9", features = ["fuzzy-select"] }
directories = "4"
figment = { version = "0.10", features = ["toml", "env"] }
futures = "0.3"
handlebars = "4.1"
hyper = "0.14"
ignore = "0.4"
itertools = "0.10"
mime = "0.3"
mime_guess = "1"
prettytable-rs = "0.8"
regex = "1"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = {version ="1", features = ["derive"]}
serde_json = "1"
serde_variant = "0.1"
service_world = "0.2"
simplelog = "0.11"
structopt = "0.3"
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"]}
toml = "0.5"
tracing = { version = "0.1" }
tracing-subscriber = "0.3"
webbrowser = "0.5"

[features]
default = []
aws = ["cd-aws"]
centerdevice-api = ["centerdevice"]
